<resources>
    <string name="app_name">One Deck Dungeon</string>
    <string name="dungeon_deck">Dungeon Deck</string>
    <string name="look_ahead">Look Ahead</string>
    <string name="explore">Explore</string>
    <string name="traverse_first">Traverse\nFirst</string>
    <string name="traverse_second">Traverse\nSecond</string>
    <string name="memorize">Memorize</string>
    <string name="stored_memories">STORED MEMORIES:</string>
    <string name="loot_gathered">LOOT GATHERED: </string>
    <string name="relics_found">RELICS FOUND:</string>
    <string name="recall">Retrace</string>
    <string name="play">NEW GAME</string>
    <string name="slash">/</string>
    <string name="highscores">HIGH SCORE</string>
    <string name="settings">SETTINGS</string>
    <string name="settings_blurb">Higher difficulties contain more monsters and more relics to find, but wins are worth a better high score!</string>
    <string name="rules">HOW TO PLAY</string>
    <string name="ZERO">0</string>
    <string name="win">YOU FOUND ALL OF THE RELICS AND ESCAPED!\nYOU WIN!</string>
    <string name="lose">THE DUNGEON CLAIMS ANOTHER VICTIM!\nGAME OVER!</string>
    <string name="settings_info">SELECT A DIFFICULTY:</string>
    <string name="easy">CASUAL</string>
    <string name="medium">STANDARD</string>
    <string name="hard">BRUTAL</string>

    <string name="ruleset">Objective: Collect all relics, then find the exit.\n\nExplore: Flips over the first two cards if they are face down.\n\nMemorize: Adds the top card to the memories pile if it is a number.\n\nRetrace: Puts the selected card on top of the deck.\n\nTraverse: Move through the dungeon based on the number of the card. After traversing, the card you landed on will be collected.\nIf it is a number card, it gets removed from the deck and added to the loot count.\nIf it\'s a relic, it gets removed from the deck and added to the relic count.\nIf it\'s a monster, you lose.\nIf it\'s the exit and you have all relics, then you win, otherwise nothing happens.\n\nIf at any point you can\'t traverse using the top two cards, you must retrace from the memories pile.\nIf there are no memories to retrace from, the game is lost.</string>
</resources>