<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/odd_icon_bg"
    tools:context=".MainActivity" >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_explore"
        android:layout_width="134dp"
        android:layout_height="77dp"
        android:background="@drawable/odd_button"
        android:fontFamily="monospace"
        android:text="@string/explore"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="390dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_traverse"
        android:layout_width="134dp"
        android:layout_height="77dp"
        android:background="@drawable/odd_button"
        android:fontFamily="monospace"
        android:text="@string/traverse"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="390dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_memorize"
        android:layout_width="134dp"
        android:layout_height="77dp"
        android:background="@drawable/odd_button"
        android:fontFamily="monospace"
        android:text="@string/memorize"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="272dp"
        tools:layout_editor_absoluteY="390dp" />

    <HorizontalScrollView
        android:id="@+id/deck_display"
        android:layout_width="571dp"
        android:layout_height="389dp"
        android:background="@drawable/odd_card_rack"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="horizontal"
        tools:layout_editor_absoluteX="-90dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" />
    </HorizontalScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="546dp"
        android:layout_height="373dp"
        android:background="@drawable/odd_card_rack_flipped"
        tools:layout_editor_absoluteX="-57dp"
        tools:layout_editor_absoluteY="481dp">

        <TextView
            android:id="@+id/text_stored_memories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/stored_memories"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="159dp"
            tools:layout_editor_absoluteY="64dp" />

        <TextView
            android:id="@+id/text_loot_gathered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/loot_gathered"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="121dp"
            tools:layout_editor_absoluteY="224dp" />

        <TextView
            android:id="@+id/text_relics_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/relics_found"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="121dp"
            tools:layout_editor_absoluteY="265dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>