<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/odd_icon_bg">


    <TextView
        android:id="@+id/score_blurb"
        android:layout_width="397dp"
        android:layout_height="189dp"
        android:layout_marginTop="536dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="1.9"
        android:shadowDy="1.9"
        android:shadowRadius="2.9"
        android:text="@string/settings_blurb"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="273dp"
        android:layout_height="97dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072"
        app:srcCompat="@drawable/odd_button" />

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="monospace"
        android:shadowColor="@color/black"
        android:shadowDx="1.9"
        android:shadowDy="1.9"
        android:shadowRadius="2.9"
        android:text="@string/settings"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="602dp"
        android:layout_height="466dp"
        android:layout_marginTop="155dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/odd_card_rack" />

    <TextView
        android:id="@+id/settingsInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="256dp"
        android:fontFamily="monospace"
        android:shadowColor="@color/black"
        android:shadowDx="1.9"
        android:shadowDy="1.9"
        android:shadowRadius="2.9"
        android:text="@string/settings_info"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/settingsChoice"
        android:layout_width="314dp"
        android:layout_height="232dp"
        android:layout_marginTop="296dp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.711"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/easyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:buttonTint="@color/black"
            android:fontFamily="monospace"
            android:shadowColor="@color/black"
            android:shadowDx="1.9"
            android:shadowDy="1.9"
            android:shadowRadius="2.9"
            android:text="@string/easy"
            android:textColor="@color/black"
            android:textSize="48sp" />

        <RadioButton
            android:id="@+id/medButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:buttonTint="@color/black"
            android:fontFamily="monospace"
            android:shadowColor="@color/black"
            android:shadowDx="1.9"
            android:shadowDy="1.9"
            android:shadowRadius="2.9"
            android:text="@string/medium"
            android:textColor="@color/black"
            android:textSize="48sp" />

        <RadioButton
            android:id="@+id/hardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:buttonTint="@color/black"
            android:fontFamily="monospace"
            android:shadowColor="@color/black"
            android:shadowDx="1.9"
            android:shadowDy="1.9"
            android:shadowRadius="2.9"
            android:text="@string/hard"
            android:textColor="@color/black"
            android:textSize="48sp" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>