<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/odd_icon_bg"
    tools:context=".PlayGame">

    <LinearLayout
        android:layout_width="418dp"
        android:layout_height="111dp"
        android:layout_marginTop="302dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_memorize"
            android:layout_width="179dp"
            android:layout_height="119dp"
            android:background="@drawable/odd_button"
            android:fontFamily="monospace"
            android:text="@string/memorize"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_explore"
            android:layout_width="192dp"
            android:layout_height="120dp"
            android:background="@drawable/odd_button"
            android:fontFamily="monospace"
            android:onClick="explore"
            android:text="@string/explore"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="413dp"
        android:layout_height="377dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_traverse1"
            android:layout_width="134dp"
            android:layout_height="77dp"
            android:layout_marginTop="212dp"
            android:layout_marginEnd="208dp"
            android:background="@drawable/odd_button"
            android:fontFamily="monospace"
            android:onClick="traverseFirst"
            android:text="@string/traverse"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_traverse2"
            android:layout_width="134dp"
            android:layout_height="77dp"
            android:layout_marginStart="216dp"
            android:layout_marginTop="212dp"
            android:background="@drawable/odd_button"
            android:fontFamily="monospace"
            android:onClick="traverseSecond"
            android:text="@string/traverse"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/card_rack"
            android:layout_width="539dp"
            android:layout_height="438dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/odd_card_rack" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCards"
            android:layout_width="376dp"
            android:layout_height="201dp"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="546dp"
        android:layout_height="373dp"
        android:layout_marginTop="392dp"
        android:background="@drawable/odd_card_rack_flipped"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/text_stored_memories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="monospace"
            android:text="@string/stored_memories"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_loot_gathered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="121dp"
            android:layout_marginTop="252dp"
            android:fontFamily="monospace"
            android:text="@string/loot_gathered"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/loot_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="388dp"
            android:layout_marginTop="252dp"
            android:fontFamily="monospace"
            android:text="@string/ZERO"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/relics_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="388dp"
            android:layout_marginTop="284dp"
            android:fontFamily="monospace"
            android:text="@string/ZERO"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_relics_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="121dp"
            android:layout_marginBottom="57dp"
            android:fontFamily="monospace"
            android:text="@string/relics_found"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_recall1"
            android:layout_width="117dp"
            android:layout_height="65dp"
            android:layout_marginStart="205dp"
            android:layout_marginTop="180dp"
            android:background="@drawable/odd_button"
            android:fontFamily="monospace"
            android:text="@string/recall"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_recall2"
            android:layout_width="117dp"
            android:layout_height="65dp"
            android:layout_marginTop="180dp"
            android:layout_marginEnd="104dp"
            android:background="@drawable/odd_button"
            android:fontFamily="monospace"
            android:text="@string/recall"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_recall3"
            android:layout_width="117dp"
            android:layout_height="65dp"
            android:layout_marginStart="87dp"
            android:layout_marginTop="180dp"
            android:background="@drawable/odd_button"
            android:fontFamily="monospace"
            android:text="@string/recall"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/memory_slot1"
            android:layout_width="87dp"
            android:layout_height="93dp"
            android:layout_marginStart="100dp"
            android:layout_marginTop="96dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/memory_empty" />

        <ImageView
            android:id="@+id/memory_slot2"
            android:layout_width="87dp"
            android:layout_height="93dp"
            android:layout_marginStart="336dp"
            android:layout_marginTop="96dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/memory_empty" />

        <ImageView
            android:id="@+id/memory_slot3"
            android:layout_width="87dp"
            android:layout_height="93dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="96dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/memory_empty" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>